force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <description>Represents a receivable: an incoming payment, or an advice of incoming funds. [Encompasses the former Payment Log, Payment Group and Receipt objects to 1 single object.]</description>
    <label>Receipt</label>
    <nameField>
        <displayFormat>RCT-{0000000}</displayFormat>
        <label>Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>