force-app/main/default/objects/Receipt__c/fields/Accounting_Bank_Deposit_Number__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Bank_Deposit_Number__c</fullName>
    <description>New Field (Future-looking)</description>
    <label>Accounting Bank Deposit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>