force-app/main/default/objects/Receipt__c/fields/Accounting_Legacy_Deposit_ID__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Legacy_Deposit_ID__c</fullName>
    <description>New Field (Future-looking)</description>
    <label>Accounting Legacy Deposit ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>