force-app/main/default/objects/Receipt__c/fields/Accounting_Location__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Location__c</fullName>
    <description>New Field (Future-looking)</description>
    <label>Accounting Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>