force-app/main/default/objects/Receipt__c/fields/Add_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Add_Deduction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add if the current check has any deductions</description>
    <label>Add Deduction</label>
    <type>Checkbox</type>
</CustomField>