force-app/main/default/objects/Receipt__c/fields/Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining__c</fullName>
    <formula>IF(((Deduction_Amount__c != 0.0 || Deduction_Amount__c != 0.0) &amp;&amp; (Payment_Amount__c == 0.0 || Payment_Amount__c == 0.0)), Deduction_Amount__c - Total_Amount_Allocated__c,
IF(((Payment_Amount__c != 0.0 || Payment_Amount__c != 0.0) &amp;&amp; (Deduction_Amount__c == 0.0 || Deduction_Amount__c == 0.0)), Payment_Amount__c - Total_Amount_Allocated__c, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>