force-app/main/default/objects/Receipt__c/fields/Bank_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Deposit_Date__c</fullName>
    <description>Fiscal&#39;s Bank Deposit Date. Required for payment logs depositing to Account 108.</description>
    <label>Bank Deposit Date</label>
    <type>Date</type>
</CustomField>