force-app/main/default/objects/Receipt__c/fields/Buyback_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyback Eligible</label>
    <type>Checkbox</type>
</CustomField>