force-app/main/default/objects/Receipt__c/fields/CC_Satisfaction_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Satisfaction_Date__c</fullName>
    <description>New field created for Accounting needs</description>
    <label>CC Satisfaction Date</label>
    <type>Date</type>
</CustomField>