force-app/main/default/objects/Receipt__c/fields/Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Date__c</fullName>
    <description>Field that captures the clearance date on a payment record</description>
    <label>Clearance Date</label>
    <type>Date</type>
</CustomField>