force-app/main/default/objects/Receipt__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Text area for user to leave additional information on the Payment record</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>