force-app/main/default/objects/Receipt__c/fields/Date_Purged__c.field-meta.xml
<CustomField>
    <fullName>Date_Purged__c</fullName>
    <description>Field allows user to capture the date that a payment was purged</description>
    <label>Date Purged</label>
    <type>Date</type>
</CustomField>