force-app/main/default/objects/Receipt__c/fields/Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned__c</fullName>
    <description>Date payment was mailed back to submitter. Different from Returned_Date__c which is the date a payment was returned from the bank.</description>
    <inlineHelpText>Date payment was mailed back to submitter. Different from Returned Date which is the date a payment was returned from the bank.</inlineHelpText>
    <label>Date Returned</label>
    <type>Date</type>
</CustomField>