force-app/main/default/objects/Receipt__c/fields/Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Deduction amount if any</description>
    <label>Deduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>