force-app/main/default/objects/Receipt__c/fields/EFT_Satisfaction_Date__c.field-meta.xml
<CustomField>
    <fullName>EFT_Satisfaction_Date__c</fullName>
    <description>For accounting needs</description>
    <label>EFT Satisfaction Date</label>
    <type>Date</type>
</CustomField>