force-app/main/default/objects/Receipt__c/fields/Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Date__c</fullName>
    <description>Used to capture the Hold Date. Hold date populated from Trigger from Receipt</description>
    <label>Hold Date</label>
    <type>Date</type>
</CustomField>