force-app/main/default/objects/Receipt__c/fields/Instrument_Number__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Number__c</fullName>
    <description>Field for capturing the Id number on a check or an instrument.
Old API - Check_Instrument_Number__c</description>
    <label>Instrument Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>