force-app/main/default/objects/Receipt__c/fields/Not_Processed_Amounts_Do_Not_Match__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_Amounts_Do_Not_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Processed Amounts Do Not Match</label>
    <type>Checkbox</type>
</CustomField>