force-app/main/default/objects/Receipt__c/fields/Not_Processed_Insufficient_Signature_s__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_Insufficient_Signature_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Processed Insufficient Signature(s)</label>
    <type>Checkbox</type>
</CustomField>