force-app/main/default/objects/Receipt__c/fields/Not_Processed_No_Amount__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_No_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Processed No Amount</label>
    <type>Checkbox</type>
</CustomField>