force-app/main/default/objects/Receipt__c/fields/Not_Processed_Paid_In_Full_Date__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_Paid_In_Full_Date__c</fullName>
    <label>Not Processed Paid In Full Date</label>
    <type>Date</type>
</CustomField>