force-app/main/default/objects/Receipt__c/fields/Not_Processed_Post_Dated__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_Post_Dated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Processed Post Dated</label>
    <type>Checkbox</type>
</CustomField>