force-app/main/default/objects/Receipt__c/fields/Not_Processed_Stale_Date__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_Stale_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Processed Stale Date</label>
    <type>Checkbox</type>
</CustomField>