force-app/main/default/objects/Receipt__c/fields/NSF__c.field-meta.xml
<CustomField>
    <fullName>NSF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NSF (Non-Sufficient Funds) designation to notify Cashiers that they can demand a replacement from a payor who&#39;s check is not valid.</description>
    <label>NSF</label>
    <type>Checkbox</type>
</CustomField>