force-app/main/default/objects/Receipt__c/fields/NSF_Total_Due__c.field-meta.xml
<CustomField>
    <fullName>NSF_Total_Due__c</fullName>
    <formula>Payment_Amount__c + 10.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSF Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>