force-app/main/default/objects/Receipt__c/fields/Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Office_ID__c</fullName>
    <formula>Transaction__r.Office_Account__r.Office__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office ID</label>
    <type>Text</type>
</CustomField>