force-app/main/default/objects/Receipt__c/fields/Office_Unit__c.field-meta.xml
<CustomField>
    <fullName>Office_Unit__c</fullName>
    <description>Picklist field that allows user to designate the Office Unit on the Payment record.</description>
    <label>Office Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCU 32</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>WCA 1</fullName>
            </value>
            <value>
                <fullName>WCA 4</fullName>
            </value>
            <value>
                <fullName>WCA 5</fullName>
            </value>
            <value>
                <fullName>WCA 6</fullName>
            </value>
            <value>
                <fullName>WCA 7</fullName>
            </value>
            <value>
                <fullName>WCA 8</fullName>
            </value>
            <value>
                <fullName>WCA 9</fullName>
            </value>
            <value>
                <fullName>WCA 10</fullName>
            </value>
            <value>
                <fullName>WCA 11</fullName>
            </value>
            <value>
                <fullName>WCA 12</fullName>
            </value>
            <value>
                <fullName>WCA 13</fullName>
            </value>
            <value>
                <fullName>WCA 14</fullName>
            </value>
            <value>
                <fullName>WCA 15</fullName>
            </value>
            <value>
                <fullName>WCA 17</fullName>
            </value>
            <value>
                <fullName>WCA 18</fullName>
            </value>
            <value>
                <fullName>WCA 23</fullName>
            </value>
            <value>
                <fullName>WCA 633</fullName>
            </value>
            <value>
                <fullName>RCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>