force-app/main/default/objects/Receipt__c/fields/Oracle_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Receipt_Number__c</fullName>
    <description>Receipt number from the legacy Oracle database.</description>
    <inlineHelpText>Receipt number from the legacy Oracle database.</inlineHelpText>
    <label>Oracle Receipt Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>