force-app/main/default/objects/Receipt__c/fields/Oracle_Receipt_Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Receipt_Prepared_By__c</fullName>
    <description>For migrated receipts, the initials of the receipting clerk who prepared the receipt in the legacy Oracle database.</description>
    <label>Oracle Receipt Prepared By</label>
    <length>5</length>
    <type>Text</type>
</CustomField>