force-app/main/default/objects/Receipt__c/fields/Party_to_Party_Payment__c.field-meta.xml
<CustomField>
    <fullName>Party_to_Party_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Needed when Party to Party is merged into Incoming Check Log</description>
    <label>Party to Party Payment</label>
    <type>Checkbox</type>
</CustomField>