force-app/main/default/objects/Receipt__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for capturing the Payee on a payment, field is a look up to Account</description>
    <label>Payee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>