force-app/main/default/objects/Receipt__c/fields/Payor_Name__c.field-meta.xml
<CustomField>
    <fullName>Payor_Name__c</fullName>
    <label>Payor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>