force-app/main/default/objects/Receipt__c/fields/PMT_Imported_From__c.field-meta.xml
<CustomField>
    <fullName>PMT_Imported_From__c</fullName>
    <label>PMT Imported From</label>
    <length>10</length>
    <type>Text</type>
</CustomField>