force-app/main/default/objects/Receipt__c/fields/Receipt_Index__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Index__c</fullName>
    <label>Receipt Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>