force-app/main/default/objects/Receipt__c/fields/Refund_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Refund_Explanation__c</fullName>
    <label>Refund Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>