force-app/main/default/objects/Receipt__c/fields/Returned_Item__c.field-meta.xml
<CustomField>
    <fullName>Returned_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This marks the Item returned so that the transactions related to this item may be reversed within the system.</description>
    <inlineHelpText>Check this box when the bank notifies Cashiering that this deposited Receipt has been returned, e.g., Non-Sufficient Funds (NSF) or Stopped Payment.</inlineHelpText>
    <label>Returned Item</label>
    <type>Checkbox</type>
</CustomField>