force-app/main/default/objects/Receipt__c/fields/Senior_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Senior_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When wage passes through, this field should be entered and the email about the receipt has to be sent to this Senior Deputy.</description>
    <label>Senior Deputy</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>DIR_Employee__c.Title__c</field>
            <operation>equals</operation>
            <value>Senior Deputy Labor Commissioner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipName>Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>