force-app/main/default/objects/Receipt__c/fields/State_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>State_Case_Number__c</fullName>
    <description>State Case Number</description>
    <label>State Case Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>