force-app/main/default/objects/Receipt__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent transaction that ends up being deposited or reversed with the bank.</description>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>