force-app/main/default/objects/Receipt__c/fields/UWF_Eligible__c.field-meta.xml
<CustomField>
    <fullName>UWF_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be checked when the receipting cashier knows that the instrument is likely to have Unpaid Wage Fund mostly for Passthrough Payments.</description>
    <label>UWF Eligible</label>
    <type>Checkbox</type>
</CustomField>